assets/css/styles.css
 body {
    background-color: #fff8f0;
    padding-top: 248px;
    font-family: 'Montserrat', sans-serif;
 }

 section {
    background-color: #fff8f0;
 }

 /*----------------------------------Helpers-------------------------------*/

 .mb-16 {
    margin-bottom: 16px;
 }

 .mt-16 {
     margin-top: 16px;
 }

/*----------------------------------Navbar-------------------------------*/

#logoimage {
    background-color: #fff8f0;
    border-radius: 50%;
    width: 200px;
    height: 200px;
    padding: 0;
    margin: 0;
}

nav {
    padding: 16px;
    font-size: 1.5rem;
    background-color: #392f5a;
}

.navbar-brand {
    font-size: 2rem;
    padding: 16px;
}

.navbar-dark .navbar-nav .nav-link {
    color: #f4d06f;
}

.navbar-dark .navbar-brand {
    color: #f4d06f;
    font-size: 36px;
}

.navbar-dark .navbar-nav .nav-link:focus, .navbar-dark .navbar-nav .nav-link:hover {
    color: #fff8f0;
}

.nav-container {
    display: flex;
    max-width: 1400px;
    margin: 0 auto;
    width: 100%;
    justify-content: space-between;
}

/*----------------------------------Hero-image-------------------------------*/

.hero-image-start {
    display: flex;
    flex-direction: column;
    background-color: #392f5a;
    justify-content: center;
    height: 600px;
    padding: 30px;
    margin-bottom: 0;
}

hr {
    border: 3px solid #ff8811;
    background-color: #ff8811;
    width: 100px;
    margin-bottom: 48px;
}   

.hero-filter {
    font-size: 1.5em;
    position: relative;
}

.hero-filter h2 {
    color: #fff8f0;
    position: absolute;
    top: 45%;
    left: 47%;
    color: #fff8f0;
}

.hero-image-filter {
    filter: brightness(0.5);
}

/*----------------------------------Cta-messages-------------------------------*/

.hero-image-start > div {
    color:#fff8f0;
    background-repeat: no-repeat;
    background-position: center;
    background-size: cover;
    flex: 1 1  auto;
    max-width: 1400px;
    margin: 10px auto;
    width: 100%;
}

.message-first {
    background-image: url("../images/1.png");
}

.message-first h2{
    margin-top: 16px;
}

.message-second {
    background-image: url("../images/2.png");
}

.message-second h2{
    margin-top: 16px;
}

.message-third {
    background-image: url("../images/3.png");
}

.message-third h2{
    margin-top: 16px;
}

.message-first-text {
    color:#444444;
    padding: 5px;
    width: 65%;
    margin: 24px auto;
    text-align: center;
}

.message-second-text {
    color:#444444;
    padding: 5px;
    width: 65%;
    margin: auto;
    text-align: center;
    margin-bottom: 32px;
}

/*----------------------------------Testimonials-------------------------------*/

#testimonials-container {
    display: flex;
    width: 66%;
    margin: 16px auto;
    background-color: #fff8f0;
}

#testimonials-heading h3{
    margin: 24px auto;
    text-align: center;
    font-style: normal;
}

#testimonials-container > div {
    color:#444444;
    font-style: italic;
    width: 30%;
    margin: 0 auto;
}

/*----------------------------------Cta-button------------------------------*/

.cta-button {
    margin: 48px;
    padding: 24px 40px;
    font-size: 1.75rem;
    cursor: pointer;
    text-transform: uppercase;
    text-align: center;
    text-decoration: none;
    outline: none;
    color:#fff8f0;
    background-color: #ff8811;
    border: none;
    border-radius: 15px;
    box-shadow: 5px 5px 5px #44444487;
}

.cta-button:hover {
    background-color: #392f5a;
}

.cta-button:active {
  background-color: #392f5a;
  box-shadow: 5px 5px 5px #44444487;
  transform: translateY(4px);
}

.button-container {
    display: flex;
    justify-content: center;
    background-color: #fff8f0;
}

.cta-button-about-tools {
    margin: 0px 16px 64px;
}

/*----------------------------------Footer-------------------------------*/

.footer-container {
    background-color: #392f5a;
    color:#fff8f0;
    display: flex;
    justify-content: space-between;
    padding-top: 16px;
}

.footer-container i {
    color:#fff8f0;
}

.description {
   margin-left: 16px;
    width: 15%;
    font-size: 0.75rem;
}

.social-media a {
    margin: 10px;
    font-size: 1.5rem;
}

.social-media span {
    font-size: 0.75rem;
}

.footer-contact {
margin-right: 16px;
font-size: 0.75rem;
}

/*----------------------------------Services-------------------------------*/

.general-heading {
    text-align: center;
    color: #444444;
    font-size: xx-large;
    margin: 24px auto;
}

.services-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: auto auto;
    grid-gap: 20px;
    max-width: 800px;
    margin: 48px auto;
    background-color: #fff8f0;
}

.services-container div {
    color:#444444;
    border-radius: 25px;
}

.services-container-one {
    margin: 0 auto;
    margin-top: 24px;
}
    
.services-container-two {
    margin: 0 auto;
    margin-top: 24px;
}

.column {
    background-color: #fff8f0;
    text-align: center;
    max-width: 400px;
    border: 1px solid #444444;
    padding: 16px;
    box-shadow: 5px 5px 5px #44444487;
    margin: 0 auto;
}

/*----------------------------------About me-------------------------------*/

.about-container {
    color: #444444;
    width: 100%;
    margin: 48px auto 0;
}

.about-picture {
    width: 100%;
    margin-bottom: 64px;
}

.about-picture img {
    margin-top: 16px;
    margin-left: 144px;
    width: 300px;
    height: 300px;
    border-radius: 50%;
    object-fit: cover;
}

.about-text-one {
    display: inline-block;
    width: 51%;
    text-align: left;
    color: #444444;
    vertical-align: bottom;
    margin-left: 40px;
    font-weight: 300;
}

.about-text-one h4 {
    font-weight: 300;
}

.about-text-two {
    width: 30%;
    margin: 40px;
    margin-left: 316px;
    background-color: #fff8f0;
    padding: 8px;
    text-align: center;
    border-radius: 25px;
}

.about-text-three {
    display: inline-block;
    width: 30%;
    background-color: #fff8f0;
    padding: 8px;
    text-align: center;
    border-radius: 25px;
}

.about-philosophy {
    display: grid;
    place-content: center;
    text-align: center;
    width: 552px;
    height: 552px;
    border-radius: 50%;
    align-items: center;
    margin: 64px auto;
    border: 1px solid #444444;
    font-weight: 300;
    background: #444444;
    color: #fff8f0;
}

.about-philosophy h3 {
    font-weight: 300;
}

.about-philosophy p {
    width: 480px;
    margin: 16px auto;
}

.rule-philosophy {
    width: 300px;
    border: 0.5px solid #fff8f0;
    margin: 0 auto;
}


/*----------------------------------History timeline------------------------------*/

.timeline-item {
    padding: 4em 2em 0 2em;
    position: relative;
    color: #444444;
    border-left: 1px solid;
    width: 30%;
    margin: 0 auto;
}

.timeline-item p {
    padding: 0;
    margin: 0;
}

.timeline-item:before {
    content: attr(data-dates);
    position: absolute;
    left: 2.5em;
    top: 3em;
    display: block;
    font-size: 0.8em;
    padding: 0;
    margin: 0;
}

.timeline-item:after {
    width: 12px;
    height: 12px;
    display: block;
    top: 2.4em;
    position: absolute;
    left: -6px;
    border-radius: 12px;
    content: '';
    background-color: black;
}

.timeline-container {
    margin: 100px auto;
}
/*----------------------------------Contact-form-------------------------------*/

.signup-form h2 {
text-align: center;
margin-bottom: 32px;
}

.signup-form label {
    font-size: 1.25em; 
    font-weight: 500;
}

.btn-send {
    display: flex;
    justify-content: center;
}

.form-section {
    color: #444444;
    background-color: #fff8f0;
    padding: 32px;
    max-width: 70%;
    margin: 0 auto;
    text-align: center;
}

.text-input {
    width: 20%;
    height: 25px;
    margin: 5px 0 20px 0;
    border: 1px solid black;
    border-radius: 8px;
}

#comment {
    display: block;
    margin: 0;
    margin-bottom: 24px;
    width: 55%;
    height: 184px;
    border: 1px solid black;
    border-radius: 8px;
}

.radio-section {
    padding-top: 32px;
}

/*----------------------------------Theory-------------------------------*/

.theory-container {
    color: #444444;
    display: flex;
    justify-content: center;
    margin-top: 32px;
    margin-bottom: 32px;
}

.theory-container > div {
    margin: 16px;
    width: 30%;
    height: auto;
    border-radius: 25px;
} 

/*----------------------------------Tools-------------------------------*/

.line-container {
    display: flex;
    justify-content: center;
    align-items: center;
}

.tools {
    width: 60%;
    min-height: 24px;
    background-color: #fff8f0;
    margin: 20px;
    border-radius: 25px;
    font-size: 24px;
    text-align: center;
    border: 1px solid #444444;
}

.btn {
    border-radius: 25px;
}

.btn-warning {
    color: #fff8f0;
    background-color: #ff8811;
    border-color: #ff8811;
}

@media only screen and (max-width:576px) {
    body {
        padding-top: 198px;
    }
    #logoimage {
        width: 150px;
        height: 150px;
    }
    .hero-image-start {
        height: 908px;
    }
    .tools {
        margin: 20px auto;
        width: 100%;
    }
    .line-container {
        display: block;
    }
    .form-section {
        max-width: none;
        padding: 24px;
        text-align: left;
    }
    .btn.btn-warning {
        position: relative;
        left: 33%;
    }
    .hero-filter h2 {
        left: 33%;
    }
    .social-media {
        width: 30%;
    }
    .description {
        width: 30%;
    }
    .social-media a {
        display: block;
        margin: 0 24px;
    }
    .message-first-text {
        width: 95%;
        text-align: left;
    }
    .message-second-text {
        width: 95%;
        text-align: left;
    }
    .about-text-one {
        width: 84%;
        text-align: center;
        margin-left: 0;
    }
    .about-philosophy {
        width: 100%;
        height: auto;
        border-radius: 0;
    }   
    .about-philosophy p {
        width: 100%;
        padding: 0 16px;
    }
    .timeline-container {
        margin: 0px 159px 64px 0px;
    }
    .timeline-item {
        width: 64%;
    }
}

@media only screen and (max-width:673px) {
   .about-picture {
       text-align: center;
        }
    .about-picture img {
       margin-bottom: 24px;
   }
   .theory-container {
        width: 100%;
        display: block;
   }
   .theory-container > div  {
        width: 94%;
        margin: 16px auto;
   }
}

@media only screen and (max-width:768px) {
    .services-container {
        grid-template-columns: 1fr;
    }
    #testimonials-container > div {
        width: 64%;
    }
    #testimonials-container {
        width: 100%;
        display: block;
    }
    .form-section {
        padding: 40px;
    }
}

@media only screen and (max-width:992px) {
    .nav-container {
        display: block;
    }
    .navbar-brand {
        width: calc(100% - 88px);
    }
}

@media only screen and (max-width:1200px) {
    .about-container {
        max-width: 900px;
        margin: 0 auto;
    }
   .about-picture img {
       margin-left: 0;
   }
}

   

